; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/8021q/extr_vlan.c_vlan_group_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/8021q/extr_vlan.c_vlan_group_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlan_group = type { %struct.vlan_group** }

@VLAN_GROUP_ARRAY_SPLIT_PARTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlan_group_free(%struct.vlan_group* %0) #0 {
  %2 = alloca %struct.vlan_group*, align 8
  %3 = alloca i32, align 4
  store %struct.vlan_group* %0, %struct.vlan_group** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %17, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @VLAN_GROUP_ARRAY_SPLIT_PARTS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %20

8:                                                ; preds = %4
  %9 = load %struct.vlan_group*, %struct.vlan_group** %2, align 8
  %10 = getelementptr inbounds %struct.vlan_group, %struct.vlan_group* %9, i32 0, i32 0
  %11 = load %struct.vlan_group**, %struct.vlan_group*** %10, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.vlan_group*, %struct.vlan_group** %11, i64 %13
  %15 = load %struct.vlan_group*, %struct.vlan_group** %14, align 8
  %16 = call i32 @kfree(%struct.vlan_group* %15)
  br label %17

17:                                               ; preds = %8
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %3, align 4
  br label %4

20:                                               ; preds = %4
  %21 = load %struct.vlan_group*, %struct.vlan_group** %2, align 8
  %22 = call i32 @kfree(%struct.vlan_group* %21)
  ret void
}

declare dso_local i32 @kfree(%struct.vlan_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
